--- a/pages/4065.html
+++ b/pages/4065.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2706/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,18 +310,18 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#historical_references'>Historical References</a></li><li><a href='#FurtherDevelomentsReferences'>Further developments</a></li><li><a href='#realization_in_superstring_theory'>Realization in superstring theory</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Moonshine usually refers to the mysterious connections between the <a class='existingWikiWord' href='/nlab/show/Monster+group'>Monster simple group</a> and the modular function <math class='maruku-mathml' display='inline' id='mathml_a3d3e9ccaaa5a31f21924dbd8eb919e19be64144_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>j</mi></mrow><annotation encoding='application/x-tex'>j</annotation></semantics></math>, the <a class='existingWikiWord' href='/nlab/show/j-invariant'>j-invariant</a>. There were a bunch of <a class='existingWikiWord' href='/nlab/show/conjecture'>conjectures</a> about this connection that were proved by <a class='existingWikiWord' href='/nlab/show/Richard+Borcherds'>Richard Borcherds</a>, en passant mentioning the existence of the <a class='existingWikiWord' href='/nlab/show/Moonshine'>Moonshine vertex algebra</a> (constructed then later by FLM). Nowadays there is also Moonshine for other simple groups, by the work of J. Duncan. Everntually there shoould be an entry for the general moonshine phenomenon.</p>
+<p>Moonshine usually refers to the mysterious connections between the <a class='existingWikiWord' href='/nlab/show/Monster+group'>Monster simple group</a> and the modular function <math class='maruku-mathml' display='inline' id='mathml_471bc2103691c256fa80f5b17e4643c7583fa0e1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>j</mi></mrow><annotation encoding='application/x-tex'>j</annotation></semantics></math>, the <a class='existingWikiWord' href='/nlab/show/j-invariant'>j-invariant</a>. There were a bunch of <a class='existingWikiWord' href='/nlab/show/conjecture'>conjectures</a> about this connection that were proved by <a class='existingWikiWord' href='/nlab/show/Richard+Borcherds'>Richard Borcherds</a>, en passant mentioning the existence of the <a class='existingWikiWord' href='/nlab/show/Moonshine'>Moonshine vertex algebra</a> (constructed then later by FLM). Nowadays there is also Moonshine for other simple groups, by the work of J. Duncan. Eventually there should be an entry for the general moonshine phenomenon.</p>
 
-<p>The whole idea of moonshine began with <a class='existingWikiWord' href='/nlab/show/John+McKay'>John McKay</a>’s observation that the <a class='existingWikiWord' href='/nlab/show/Monster+group'>Monster group</a>’s first nontrivial <a class='existingWikiWord' href='/nlab/show/irreducible+representation'>irreducible representation</a> has <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> 196883, and the <a class='existingWikiWord' href='/nlab/show/j-invariant'>j-invariant</a> <math class='maruku-mathml' display='inline' id='mathml_a3d3e9ccaaa5a31f21924dbd8eb919e19be64144_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>j</mi><mo stretchy='false'>(</mo><mi>τ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>j(\tau)</annotation></semantics></math> has the <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier series</a> expansion</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a3d3e9ccaaa5a31f21924dbd8eb919e19be64144_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>j</mi><mo stretchy='false'>(</mo><mi>τ</mi><mo stretchy='false'>)</mo><mo>=</mo><msup><mi>q</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo>+</mo><mn>744</mn><mo>+</mo><mn>196884</mn><mi>q</mi><mo>+</mo><mn>21493760</mn><msup><mi>q</mi> <mn>2</mn></msup><mo>+</mo><mi>…</mi></mrow><annotation encoding='application/x-tex'>
+<p>The whole idea of moonshine began with <a class='existingWikiWord' href='/nlab/show/John+McKay'>John McKay</a>’s observation that the <a class='existingWikiWord' href='/nlab/show/Monster+group'>Monster group</a>’s first nontrivial <a class='existingWikiWord' href='/nlab/show/irreducible+representation'>irreducible representation</a> has <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> 196883, and the <a class='existingWikiWord' href='/nlab/show/j-invariant'>j-invariant</a> <math class='maruku-mathml' display='inline' id='mathml_471bc2103691c256fa80f5b17e4643c7583fa0e1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>j</mi><mo stretchy='false'>(</mo><mi>τ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>j(\tau)</annotation></semantics></math> has the <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier series</a> expansion</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_471bc2103691c256fa80f5b17e4643c7583fa0e1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>j</mi><mo stretchy='false'>(</mo><mi>τ</mi><mo stretchy='false'>)</mo><mo>=</mo><msup><mi>q</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msup><mo>+</mo><mn>744</mn><mo>+</mo><mn>196884</mn><mi>q</mi><mo>+</mo><mn>21493760</mn><msup><mi>q</mi> <mn>2</mn></msup><mo>+</mo><mi>…</mi></mrow><annotation encoding='application/x-tex'>
   j(\tau) = q^{-1} + 744 + 196884q + 21493760q^{2} + \dots
 
 </annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_a3d3e9ccaaa5a31f21924dbd8eb919e19be64144_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo>=</mo><mi>exp</mi><mo stretchy='false'>(</mo><mi>i</mi><mn>2</mn><mi>π</mi><mi>τ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>q=\exp(i2\pi\tau)</annotation></semantics></math>, and famously 196883+1=196884. Thompson observed in (1979) that the other coefficients are obtained from the dimensions of Monster’s irreducible representations.</p>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_471bc2103691c256fa80f5b17e4643c7583fa0e1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>q</mi><mo>=</mo><mi>exp</mi><mo stretchy='false'>(</mo><mi>i</mi><mn>2</mn><mi>π</mi><mi>τ</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>q=\exp(i2\pi\tau)</annotation></semantics></math>, and famously 196883+1=196884. Thompson observed in (1979) that the other coefficients are obtained from the dimensions of Monster’s irreducible representations.</p>
 
 <p>But the monster was merely <em>conjectured</em> to exist until Griess (1982) explicitly constructed it. The construction is horribly complicated (take the sum of three irreducible representations for the <a class='existingWikiWord' href='/nlab/show/centralizer'>centralizer</a> of an <a class='existingWikiWord' href='/nlab/show/involution'>involution</a> of…).</p>
 
-<p>Frenkel, Lepowsky, Meurman (1984) construct (<a href='#FrenkelLepowskiMeurman89'>Frenkel-Lepowski-Meurman 89</a>) an infinite-dimensional <a class='existingWikiWord' href='/nlab/show/module'>module</a> for the <a class='existingWikiWord' href='/nlab/show/Monster+vertex+algebra'>Monster vertex algebra</a>. This is by a generalized <a class='existingWikiWord' href='/nlab/show/Kac-Moody+algebra'>Kac-Moody algebra</a> via <a class='existingWikiWord' href='/nlab/show/bosonic+string+theory'>bosonic string theory</a> and the <a class='existingWikiWord' href='/nlab/show/Goddard-Thorn+theorem'>Goddard-Thorn &quot;No Ghost&quot; theorem</a>. The <a class='existingWikiWord' href='/nlab/show/Monster+group'>Monster group</a> acts naturally on this “Moonshine Module” (denoted by <math class='maruku-mathml' display='inline' id='mathml_a3d3e9ccaaa5a31f21924dbd8eb919e19be64144_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi><mo>♮</mo></mrow><annotation encoding='application/x-tex'>V\natural</annotation></semantics></math>).</p>
+<p>Frenkel, Lepowsky, Meurman (1984) construct (<a href='#FrenkelLepowskiMeurman89'>Frenkel-Lepowski-Meurman 89</a>) an infinite-dimensional <a class='existingWikiWord' href='/nlab/show/module'>module</a> for the <a class='existingWikiWord' href='/nlab/show/Monster+vertex+algebra'>Monster vertex algebra</a>. This is by a generalized <a class='existingWikiWord' href='/nlab/show/Kac-Moody+algebra'>Kac-Moody algebra</a> via <a class='existingWikiWord' href='/nlab/show/bosonic+string+theory'>bosonic string theory</a> and the <a class='existingWikiWord' href='/nlab/show/Goddard-Thorn+theorem'>Goddard-Thorn &quot;No Ghost&quot; theorem</a>. The <a class='existingWikiWord' href='/nlab/show/Monster+group'>Monster group</a> acts naturally on this “Moonshine Module” (denoted by <math class='maruku-mathml' display='inline' id='mathml_471bc2103691c256fa80f5b17e4643c7583fa0e1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi><mo>♮</mo></mrow><annotation encoding='application/x-tex'>V\natural</annotation></semantics></math>).</p>
 
 <p>To cut the story short, we end up getting from the Monster group to a module it acts on which is related to “modular stuff” (namely, the modular <a class='existingWikiWord' href='/nlab/show/j-invariant'>j-invariant</a>). The idea <a class='existingWikiWord' href='/nlab/show/Terry+Gannon'>Terry Gannon</a> pitches is that Moonshine is a generalization of this association, it’s a sort of “mapping” from “Algebraic gadgets” to “Modular stuff”.</p>
 
@@ -385,7 +383,7 @@ margin-left: 0em;
 </li>
 
 <li id='FrenkelLepowskiMeurman89'>
-<p><a class='existingWikiWord' href='/nlab/show/Igor+Frenkel'>Igor Frenkel</a>, <a class='existingWikiWord' href='/nlab/show/James+Lepowsky'>James Lepowsky</a>, Arne Meurman, “A natural representation of the Fischer-Griess Monster with the modular function <math class='maruku-mathml' display='inline' id='mathml_a3d3e9ccaaa5a31f21924dbd8eb919e19be64144_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math> as character.” <em>Proc. Nat. Acad. Sci. U.S.A.</em> <strong>81</strong> (1984), no. 10, Phys. Sci., 3256–3260. <a href='http://www.ams.org/mathscinet-getitem?mr=747596'>MR0747596</a> (85e:20018)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Igor+Frenkel'>Igor Frenkel</a>, <a class='existingWikiWord' href='/nlab/show/James+Lepowsky'>James Lepowsky</a>, Arne Meurman, “A natural representation of the Fischer-Griess Monster with the modular function <math class='maruku-mathml' display='inline' id='mathml_471bc2103691c256fa80f5b17e4643c7583fa0e1_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math> as character.” <em>Proc. Nat. Acad. Sci. U.S.A.</em> <strong>81</strong> (1984), no. 10, Phys. Sci., 3256–3260. <a href='http://www.ams.org/mathscinet-getitem?mr=747596'>MR0747596</a> (85e:20018)</p>
 </li>
 
 <li>
@@ -406,6 +404,10 @@ margin-left: 0em;
 
 <li>
 <p>John F. R. Duncan, Michael J. Griffin and Ken Ono, <em>Proof of the Umbral Moonshine Conjecture</em> (<a href='http://arxiv.org/abs/1503.01472'>arXiv:1503.01472</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Scott+Carnahan'>Scott Carnahan</a>, <em>Monstrous Moonshine over Z?</em> (<a href='https://arxiv.org/abs/1804.04161'>arXiv:1804.04161</a>)</p>
 </li>
 </ul>
 
@@ -444,19 +446,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 23, 2017 07:11:23 
+  Revised on April 13, 2018 15:31:59
   by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (31.185.156.112)
+  (147.147.173.215).
+  See <a href="https://ncatlab.org/nlab/author/David Corfield" style="color: #005c19">Author — David Corfield</a> for an overview of the nLab pages to which David Corfield has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Moonshine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Moonshine/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/Moonshine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Moonshine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Moonshine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Moonshine/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/Moonshine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Moonshine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Moonshine" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Moonshine" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Moonshine" id="view_source" rel="nofollow">Source</a>
