--- a/pages/19110.html
+++ b/pages/19110.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -598,10 +598,16 @@ margin-left: 0em;
 <li id='SimonPolchinski96'>Eric G. Gimon, <a class='existingWikiWord' href='/nlab/show/Joseph+Polchinski'>Joseph Polchinski</a>, section 3 of <em>Consistency Conditions for Orientifolds and D-Manifolds</em>, Phys.Rev.D54:1667-1676, 1996 (<a href='https://arxiv.org/abs/hep-th/9601038'>arXiv:hep-th/9601038</a>)</li>
 </ul>
 
-<p>A textbook account is in</p>
+<p>Textbook accounts include</p>
 
 <ul>
-<li id='IbanezUranga12'><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, section 4.4 of <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge 2012</li>
+<li id='IbanezUranga12'>
+<p><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, section 4.4 of <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge 2012</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ralph+Blumenhagen'>Ralph Blumenhagen</a>, <a class='existingWikiWord' href='/nlab/show/Dieter+L%C3%BCst'>Dieter Lüst</a>, <a class='existingWikiWord' href='/nlab/show/Stefan+Theisen'>Stefan Theisen</a>, section 9.4 of <em>Basic Concepts of String Theory</em> Part of the series Theoretical and Mathematical Physics pp 585-639 Springer 2013</p>
+</li>
 </ul>
 
 <p>Quick illustrations include:</p>
@@ -638,15 +644,15 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 13, 2018 08:43:25
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (147.147.173.215).
-  See <a href="https://ncatlab.org/nlab/author/David Corfield" style="color: #005c19">Author — David Corfield</a> for an overview of the nLab pages to which David Corfield has contributed.
+  <p>
+  Last revised on April 15, 2018 at 07:44:34.
+  See the <a href="https://ncatlab.org/nlab/history/RR-field tadpole cancellation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/RR-field+tadpole+cancellation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/RR-field+tadpole+cancellation/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/RR-field+tadpole+cancellation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/RR-field+tadpole+cancellation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/RR-field+tadpole+cancellation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/RR-field+tadpole+cancellation/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/RR-field+tadpole+cancellation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/RR-field+tadpole+cancellation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
