--- a/pages/19192.html
+++ b/pages/19192.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Felix Klein in nLab
+      Klaus Lamotke in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Felix Klein
+      Klaus Lamotke
   </h1>
 
 
@@ -292,7 +292,7 @@ margin-left: 0em;
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8444/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8443/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -306,78 +306,61 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><strong>Felix C. Klein</strong> was a mathematician now famous for his study of <a class='existingWikiWord' href='/nlab/show/group+theory'>group theory</a> in conjunction with <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a> (<a class='existingWikiWord' href='/nlab/show/Klein+geometry'>Klein geometry</a>) as laid out in his <em><a class='existingWikiWord' href='/nlab/show/Erlangen+program'>Erlanger program</a></em> (<a href='#Klein72'>Klein 72</a>).</p>
+    <ul>
+<li><a href='https://de.wikipedia.org/wiki/Klaus_Lamotke'>Wikipedia entry</a></li>
+</ul>
 
-<h2 id='references'>References</h2>
+<h2 id='publications'>Publications</h2>
+
+<p>including</p>
 
 <ul>
 <li>
-<p><a href='http://en.wikipedia.org/wiki/Felix_Klein'>Wikipedia page</a></p>
+<p>Semisimpliziale Algebraische Topologie. Springer, Berlin, Heidelberg 1968</p>
 </li>
 
 <li>
-<p><a href='http://genealogy.math.ndsu.nodak.edu/id.php?id=7401'>Mathematics Genealogy page</a></p>
-</li>
-
-<li>
-<p>John Baez, <em>Klein geometry XII</em>, <a href='http://golem.ph.utexas.edu/category/2011/08/klein_2geometry_xii.html'>nCafe</a></p>
+<p>Regular Solids and Isolated Singularities. Vieweg, Braunschweig, Wiesbaden 1986.</p>
 </li>
 </ul>
 
-<h2 id='writings'>Writings</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_5a55550682b4c8d1f4c76a937b26fadb70f907ed_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li id='Klein72'>
-<p><a class='existingWikiWord' href='/nlab/show/Felix+Klein'>Felix Klein</a>, <em>A comparative review of recent researches in geometry</em>, 1872 (1892 translation: <a href='http://arxiv.org/abs/0807.3161'>arxiv/0807.3161</a></p>
-
-<p>on the <em><a class='existingWikiWord' href='/nlab/show/Erlangen+program'>Erlangen program</a></em></p>
-</li>
-
-<li id='Klein1884'>
-<p><a class='existingWikiWord' href='/nlab/show/Felix+Klein'>Felix Klein</a>, <em>Vorlesungen über das Ikosaeder und die Auflösung der Gleichungen vom fünften Grade</em>, 1884, translated as <em>Lectures on the Icosahedron and the Resolution of Equations of Degree Five</em> by George Morrice 1888, <a href='https://archive.org/details/cu31924059413439'>online version</a></p>
-
-<p>on the <a class='existingWikiWord' href='/nlab/show/classification+of+finite+rotation+groups'>classification of finite rotation groups</a> and specifically the <a class='existingWikiWord' href='/nlab/show/icosahedron'>icosahedron</a></p>
-</li>
-</ul>
-
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_7c2a1cd574082abe04f185e3498271f6258ed4e6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/stabilizer+group'>stabilizer group</a></p>
-</li>
-
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/classification+of+finite+rotation+groups'>classification of finite rotation groups</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Klein+geometry'>Klein geometry</a>, <a class='existingWikiWord' href='/nlab/show/Cartan+geometry'>Cartan geometry</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/ADE+singularity'>ADE singularity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Platonic+solid'>platonic solid</a></p>
 </li>
 </ul>
 
-<p>
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 16, 2018 at 02:36:47.
-  See the <a href="https://ncatlab.org/nlab/history/Felix Klein" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Last revised on April 16, 2018 at 02:34:41.
+  See the <a href="https://ncatlab.org/nlab/history/Klaus Lamotke" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Felix+Klein" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Felix+Klein/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Felix+Klein" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Felix+Klein" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Klaus+Lamotke" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Klaus+Lamotke/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Klaus+Lamotke" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Klaus+Lamotke" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
-    <a href="/nlab/print/Felix+Klein" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Klaus+Lamotke" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Felix+Klein" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Klaus+Lamotke" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Felix+Klein" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Klaus+Lamotke" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
