--- a/pages/420.html
+++ b/pages/420.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/474/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,19 +306,19 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='the_cube'>The <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#as_a_cubical_set'>As a cubical set</a></li><li><a href='#as_a_topological_space'>As a topological space</a></li><li><a href='#related_entries'>related entries</a></li></ul></div>
+    <h1 id='the_cube'>The <math class='maruku-mathml' display='inline' id='mathml_92e2e9028b528b2e653f0447e09fee4cb0b38399_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#as_a_cubical_set'>As a cubical set</a></li><li><a href='#as_a_topological_space'>As a topological space</a></li><li><a href='#related_entries'>related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <strong><math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-dimensional cube</strong>, or simply <strong><math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube</strong>, is a generalisation of the ordinary cube (or <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>3</mn></mrow><annotation encoding='application/x-tex'>3</annotation></semantics></math>-cube) to arbitrary dimensions. It comes in many guises.</p>
+<p>The <strong><math class='maruku-mathml' display='inline' id='mathml_92e2e9028b528b2e653f0447e09fee4cb0b38399_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-dimensional cube</strong>, or simply <strong><math class='maruku-mathml' display='inline' id='mathml_92e2e9028b528b2e653f0447e09fee4cb0b38399_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube</strong>, is a generalisation of the ordinary cube (or <math class='maruku-mathml' display='inline' id='mathml_92e2e9028b528b2e653f0447e09fee4cb0b38399_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>3</mn></mrow><annotation encoding='application/x-tex'>3</annotation></semantics></math>-cube) to arbitrary dimensions. It comes in many guises.</p>
 
 <h2 id='as_a_cubical_set'>As a cubical set</h2>
 
-<p>The standard cubical <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube is the <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a> represented (as a <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a>) by the object <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>n</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[n]</annotation></semantics></math> in the <a class='existingWikiWord' href='/nlab/show/category+of+cubes'>cube category</a>.</p>
+<p>The standard cubical <math class='maruku-mathml' display='inline' id='mathml_92e2e9028b528b2e653f0447e09fee4cb0b38399_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube is the <a class='existingWikiWord' href='/nlab/show/cubical+set'>cubical set</a> represented (as a <a class='existingWikiWord' href='/nlab/show/presheaf'>presheaf</a>) by the object <math class='maruku-mathml' display='inline' id='mathml_92e2e9028b528b2e653f0447e09fee4cb0b38399_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>n</mi><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[n]</annotation></semantics></math> in the <a class='existingWikiWord' href='/nlab/show/category+of+cubes'>cube category</a>.</p>
 
 <h2 id='as_a_topological_space'>As a topological space</h2>
 
-<p>The standard topological <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube is the space <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><msup><mo stretchy='false'>]</mo> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>[0,1]^n</annotation></semantics></math>, where <math class='maruku-mathml' display='inline' id='mathml_575c5df62debddcc15bdcf99804a8ab336692f1b_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[0,1]</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/interval'>unit interval</a>. The collection of topological cubes forms a topological <span class='newWikiWord'>cocubical set<a href='/nlab/new/cocubical+set'>?</a></span>.</p>
+<p>The standard topological <math class='maruku-mathml' display='inline' id='mathml_92e2e9028b528b2e653f0447e09fee4cb0b38399_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-cube is the space <math class='maruku-mathml' display='inline' id='mathml_92e2e9028b528b2e653f0447e09fee4cb0b38399_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><msup><mo stretchy='false'>]</mo> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>[0,1]^n</annotation></semantics></math>, where <math class='maruku-mathml' display='inline' id='mathml_92e2e9028b528b2e653f0447e09fee4cb0b38399_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mn>0</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>[0,1]</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/interval'>unit interval</a>. The collection of topological cubes forms a topological <span class='newWikiWord'>cocubical set<a href='/nlab/new/cocubical+set'>?</a></span>.</p>
 
 <h2 id='related_entries'>related entries</h2>
 
@@ -334,6 +332,14 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id='references'>References</h2>
+
+<p>Discussion of the 3-cube as a <a class='existingWikiWord' href='/nlab/show/Platonic+solid'>Platonic solid</a>:</p>
+
+<ul>
+<li id='Klein1884'><a class='existingWikiWord' href='/nlab/show/Felix+Klein'>Felix Klein</a>, chapter I.5 of <em>Vorlesungen über das Ikosaeder und die Auflösung der Gleichungen vom fünften Grade</em>, 1884, translated as <em>Lectures on the Icosahedron and the Resolution of Equations of Degree Five</em> by George Morrice 1888, <a href='https://archive.org/details/cu31924059413439'>online version</a></li>
+</ul>
+
 <p>
  
  
@@ -344,19 +350,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  2, 2017 05:53:21 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  <p>
+  Last revised on April 16, 2018 at 02:09:51.
+  See the <a href="https://ncatlab.org/nlab/history/cube" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cube" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cube/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/cube" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cube" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/cube" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cube/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/cube" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cube" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/cube" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/cube" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/cube" id="view_source" rel="nofollow">Source</a>
